fixed /index feedback button on small screens

--- a/style/index.module.scss
+++ b/style/index.module.scss
@@ -99,9 +99,9 @@
   flex-direction: column;
 }
 .buttonDisabled{
-  .buttonDisabled {
+  
     width: 90%;
-  }
+
 }
   .button {
     width: 90%;
